Test: Minor changes, restructuring, fuzzed runs increased, test underflow fixed

--- a/foundry.toml
+++ b/foundry.toml
@@ -8,6 +8,9 @@ solc_version = "0.8.30"
 src = "src"
 via_ir = false
 
+[fuzz]
+runs = 512
+
 [profile.lint]
 exclude_lints = ["screaming-snake-case-immutable", "screaming-snake-case-const"]
 
