Feat: Adding Deployment Scripts for the Alphix Contracts

--- a/.gitignore
+++ b/.gitignore
@@ -24,3 +24,9 @@ coverage/
 # Slither reports
 slither-report.*
 slither-out/
+
+# Scripts documentation
+script/alphix/DEPLOYMENT.md
+
+# Broadcast files
+broadcast/
