Chore: Minor Scripts Fixes

--- a/.env.example
+++ b/.env.example
@@ -133,9 +133,13 @@ REGISTRAR_BASE_SEPOLIA=
 # Example: 79228162514264337593543950336 = sqrt(1) * 2^96 (1:1 price)
 POOL_START_PRICE_BASE_SEPOLIA=
 
-# Human-readable liquidity amounts (NOT in wei)
-# Script will automatically convert based on token decimals
-# Example: POOL_TOKEN0_AMOUNT_BASE_SEPOLIA=100 means 100 tokens
+# Liquidity amounts in BASE UNITS (wei)
+# Examples:
+#   - For 0.1 USDC (6 decimals):  POOL_TOKEN0_AMOUNT_BASE_SEPOLIA=100000
+#   - For 0.5 ETH (18 decimals):   POOL_TOKEN0_AMOUNT_BASE_SEPOLIA=500000000000000000
+#   - For 100 USDC (6 decimals):   POOL_TOKEN0_AMOUNT_BASE_SEPOLIA=100000000
+#   - For 1.5 WBTC (8 decimals):   POOL_TOKEN0_AMOUNT_BASE_SEPOLIA=150000000
+# Tip: Use `cast --to-wei 0.5 ether` to convert human-readable to wei for 18-decimal tokens
 POOL_TOKEN0_AMOUNT_BASE_SEPOLIA=
 POOL_TOKEN1_AMOUNT_BASE_SEPOLIA=
 
@@ -152,9 +156,13 @@ POOL_ID_BASE_SEPOLIA=
 # SWAP PARAMETERS
 # ===================================================================
 
-# Human-readable amount to swap (NOT in wei)
-# Script will automatically convert based on token decimals
-# Example: SWAP_AMOUNT_BASE_SEPOLIA=1 means 1 token
+# Swap amount in BASE UNITS (wei), NOT human-readable
+# For exact input: Amount of INPUT token to sell (in base units)
+# For exact output: Amount of OUTPUT token to buy (in base units)
+# Examples:
+#   - Swap 0.1 ETH (18 decimals): SWAP_AMOUNT_BASE_SEPOLIA=100000000000000000
+#   - Swap 50 USDC (6 decimals):  SWAP_AMOUNT_BASE_SEPOLIA=50000000
+#   - Use `cast --to-wei 0.1 ether` for 18-decimal tokens
 SWAP_AMOUNT_BASE_SEPOLIA=
 
 # Swap type: 1 = exact input (you specify how much to sell)
