Chore: Minor Scripts Fixes

--- a/.env.example
+++ b/.env.example
@@ -157,11 +157,12 @@ POOL_ID_BASE_SEPOLIA=
 # ===================================================================
 
 # Swap amount in BASE UNITS (wei), NOT human-readable
-# For exact input: Amount of INPUT token to sell (in base units)
-# For exact output: Amount of OUTPUT token to buy (in base units)
+# IMPORTANT: Decimals depend on swap type!
+#   - For exact INPUT (SWAP_EXACT_INPUT=1): Use INPUT token decimals
+#   - For exact OUTPUT (SWAP_EXACT_INPUT=0): Use OUTPUT token decimals
 # Examples:
-#   - Swap 0.1 ETH (18 decimals): SWAP_AMOUNT_BASE_SEPOLIA=100000000000000000
-#   - Swap 50 USDC (6 decimals):  SWAP_AMOUNT_BASE_SEPOLIA=50000000
+#   - Sell 0.1 ETH → USDC (exact input):  SWAP_AMOUNT=100000000000000000 (ETH decimals: 18)
+#   - Buy 50 USDC with ETH (exact output): SWAP_AMOUNT=50000000 (USDC decimals: 6)
 #   - Use `cast --to-wei 0.1 ether` for 18-decimal tokens
 SWAP_AMOUNT_BASE_SEPOLIA=
 
