Chore: Minor Scripts Fixes

--- a/.env.example
+++ b/.env.example
@@ -111,7 +111,8 @@ TOKEN4_DECIMALS_BASE_SEPOLIA=
 # Initial pool configuration
 POOL_INITIAL_FEE_BASE_SEPOLIA=
 POOL_INITIAL_TARGET_RATIO_BASE_SEPOLIA=
-POOL_TYPE_BASE_SEPOLIA=  # 0=STABLE, 1=STANDARD, 2=VOLATILE
+# Pool type: 0=STABLE, 1=STANDARD, 2=VOLATILE
+POOL_TYPE_BASE_SEPOLIA=
 POOL_TICK_SPACING_BASE_SEPOLIA=
 
 # ===================================================================
@@ -172,6 +173,13 @@ SWAP_EXACT_INPUT_BASE_SEPOLIA=
 
 # Swap direction: 1 = token0->token1, 0 = token1->token0
 SWAP_ZERO_FOR_ONE_BASE_SEPOLIA=
+
+# Max input amount for exact OUTPUT swaps (required ONLY when SWAP_EXACT_INPUT=0)
+# This should be in INPUT token decimals (the token being sold)
+# Examples:
+#   - Buying 50 USDC with max 0.1 ETH: SWAP_MAX_INPUT=100000000000000000 (ETH decimals: 18)
+#   - Buying 0.1 ETH with max 100 USDC: SWAP_MAX_INPUT=100000000 (USDC decimals: 6)
+SWAP_MAX_INPUT_BASE_SEPOLIA=
 
 # ===================================================================
 # FEE POKE PARAMETERS
