--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -2,15 +2,16 @@ name: Test Suite
 
 on:
   workflow_dispatch:
-  # push:
-  # pull_request:
-
-env:
-  FOUNDRY_PROFILE: ci
+  pull_request:
+    branches:
+      - main
+  push:
+    branches:
+      - main
 
 jobs:
-  test:
-    name: Foundry Project
+  format-and-test:
+    name: Format Check & Tests
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
@@ -22,13 +23,25 @@ jobs:
         with:
           version: stable
 
-      - name: Build
+      - name: Check formatting
         run: |
           forge --version
-          forge build --sizes
-        id: build
+          forge fmt --check
 
-      - name: Test
+      - name: Build
         run: |
-          forge test -vvv
-        id: test
+          forge build --sizes
+
+      - name: Run tests (PR)
+        if: github.event_name == 'pull_request'
+        run: |
+          forge test -vv
+        env:
+          FOUNDRY_PROFILE: default
+
+      - name: Run comprehensive tests (Main branch)
+        if: github.event_name == 'push' && github.ref == 'refs/heads/main'
+        run: |
+          forge test -vv
+        env:
+          FOUNDRY_PROFILE: main
