Chore: Forge Suggestions Implemented (#19)
* Chore: Forge Suggestions Implemented + Number of test runs decreased

* Chore: More Forge Suggestions Implementated

* Chore: More Forge Suggestions Implemented

* Feat: Adding Github Workflows (fmt check + stronger tests on main)

* Workflows Unified

* Worflow minor fix

* Further Workflow Unification

* Gate coverage job to trusted contexts

--- a/foundry.toml
+++ b/foundry.toml
@@ -9,10 +9,10 @@ src = "src"
 via_ir = false
 
 [fuzz]
-runs = 512
+runs = 256
 
 [invariant]
-runs = 512
+runs = 256
 depth = 50
 fail_on_revert = false
 
@@ -23,3 +23,9 @@ exclude_lints = ["screaming-snake-case-immutable", "screaming-snake-case-const"]
 include = ["src/**/*.sol"]
 exclude = ["lib/**", "test/**", "script/**"]
 report = "lcov"
+
+# Profile for main branch PR merge testing with high fuzz runs
+[profile.main]
+fuzz.runs = 2048
+invariant.runs = 2048
+invariant.depth = 100
