--- a/codecov.yml
+++ b/codecov.yml
@@ -2,7 +2,12 @@ coverage:
   status:
     project:
       default:
-        target: 80%
+        target: 95%
+        threshold: 3%
+    patch:
+      default:
+        target: 75%
+        threshold: 5%
 ignore:
   - "test/**"
   - "script/**"
