Chore: Various optimizations + fixes

--- a/.env.example
+++ b/.env.example
@@ -69,11 +69,13 @@ TOKEN1_BASE_SEPOLIA=
 # Pool parameters
 TICK_SPACING_BASE_SEPOLIA=60
 # floor(sqrt(token1/token0) * 2**96) (take decimals into account)
+# Default value 79228162514264337593543950336 = sqrt(1) * 2^96 = 1:1 price ratio
 SQRT_PRICE_BASE_SEPOLIA=79228162514264337593543950336
 
 # Initial liquidity (in wei)
 AMOUNT0_BASE_SEPOLIA=1000000000000000000
 AMOUNT1_BASE_SEPOLIA=1000000000000000000
+# Number of tick spacings around current price for liquidity range
 LIQUIDITY_RANGE_BASE_SEPOLIA=100
 
 # Dynamic fee settings
@@ -122,16 +124,16 @@ NEW_OWNER_BASE_SEPOLIA=
 # LP TOKEN METADATA (optional)
 # ─────────────────────────────────────────────────────────────────────────────────
 
-TOKEN_NAME_BASE_SEPOLIA=Alphix LP Shares
-TOKEN_SYMBOL_BASE_SEPOLIA=ALPHIX-LP
+TOKEN_NAME_BASE_SEPOLIA="Alphix LP Shares"
+TOKEN_SYMBOL_BASE_SEPOLIA="ALPHIX-LP"
 
 # ─────────────────────────────────────────────────────────────────────────────────
 # TESTNET MOCKS (script/alphix/testnet/)
 # ─────────────────────────────────────────────────────────────────────────────────
 
 # Mock token deployment
-MOCK_TOKEN_NAME_BASE_SEPOLIA=Mock USDC
-MOCK_TOKEN_SYMBOL_BASE_SEPOLIA=mUSDC
+MOCK_TOKEN_NAME_BASE_SEPOLIA="Mock USDC"
+MOCK_TOKEN_SYMBOL_BASE_SEPOLIA="mUSDC"
 MOCK_TOKEN_DECIMALS_BASE_SEPOLIA=6
 MOCK_TOKEN_INITIAL_MINT_BASE_SEPOLIA=1000000000000
 
@@ -141,5 +143,5 @@ MOCK_USDC_BASE_SEPOLIA=
 
 # Mock yield vault deployment
 MOCK_VAULT_ASSET_BASE_SEPOLIA=
-MOCK_VAULT_NAME_BASE_SEPOLIA=Mock USDC Vault
-MOCK_VAULT_SYMBOL_BASE_SEPOLIA=mvUSDC
+MOCK_VAULT_NAME_BASE_SEPOLIA="Mock USDC Vault"
+MOCK_VAULT_SYMBOL_BASE_SEPOLIA="mvUSDC"
