Chore: Fix previews + scripts

--- a/.env.example
+++ b/.env.example
@@ -6,17 +6,26 @@
 # All addresses should be checksummed. Variables are suffixed with network name.
 #
 # Deployment Scripts Order:
-#   00_DeployAccessManager.s.sol     → ACCESS_MANAGER
-#   01_DeployAlphix.s.sol            → ALPHIX_HOOK (for ERC20/ERC20 pools)
-#   01_DeployAlphixETH.s.sol         → ALPHIX_HOOK (for ETH/ERC20 pools)
-#   02_ConfigureAndUnpause.s.sol     → Roles + Unpause
-#   03_CreatePool.s.sol              → Pool creation
-#   04_ConfigureReHypothecation.s.sol → Yield sources + JIT range
-#   05_AddRHLiquidity.s.sol          → Add rehypothecated liquidity
-#   06_Swap.s.sol                    → Execute swaps (testnet - PoolSwapTest)
-#   06b_SwapUniversalRouter.s.sol    → Execute swaps (mainnet - Universal Router)
-#   07_PokeFee.s.sol                 → Update dynamic fee
-#   08_TransferOwnership.s.sol       → Transfer to multisig
+#   Testnet Mocks (optional):
+#     testnet/00_DeployMockERC20.s.sol      → TOKEN_A, TOKEN_B
+#     testnet/01_DeployMockWETH.s.sol       → MOCK_WETH
+#     testnet/02_DeployMockYieldVault.s.sol → YIELD_SOURCE_A, YIELD_SOURCE_B
+#     testnet/02b_DeployMockYieldVaultETH.s.sol → YIELD_SOURCE_ETH
+#
+#   Main Deployment:
+#     00_DeployAccessManager.s.sol     → ACCESS_MANAGER
+#     01_DeployAlphix.s.sol            → ALPHIX_HOOK (for ERC20/ERC20 pools)
+#     01_DeployAlphixETH.s.sol         → ALPHIX_HOOK (for ETH/ERC20 pools)
+#     02_ConfigureAndUnpause.s.sol     → Roles + Unpause
+#     03_CreatePool.s.sol              → Pool creation
+#     04_ConfigureReHypothecation.s.sol → Yield sources + JIT range
+#     05_AddLiquidity.s.sol            → Add normal V4 liquidity
+#     05b_AddRHLiquidity.s.sol         → Add rehypothecated liquidity
+#     06_Swap.s.sol                    → Execute swaps (testnet - PoolSwapTest)
+#     06b_SwapUniversalRouter.s.sol    → Execute swaps (mainnet - Universal Router)
+#     07_PokeFee.s.sol                 → Update dynamic fee
+#     08_TransferOwnership.s.sol       → Transfer to multisig
+#     08b_AcceptOwnership.s.sol        → Accept ownership
 #
 # ═══════════════════════════════════════════════════════════════════════════════
 
@@ -26,88 +35,179 @@
 
 DEPLOYMENT_NETWORK=BASE_SEPOLIA
 
-# RPC URL
-RPC_URL=https://sepolia.base.org
+# RPC URL (get from Alchemy/Infura/QuickNode)
+RPC_URL=https://base-sepolia.g.alchemy.com/v2/<YOUR_API_KEY>
 
 # Deployer private key (USE TEST KEY ONLY!)
-ACCOUNT_PRIVATE_KEY=0x...
+PRIVATE_KEY=0x...
 
-# Etherscan API key for verification
-ETHERSCAN_API_KEY=
+# BaseScan API key for contract verification
+ETHERSCAN_API_KEY=<YOUR_BASESCAN_API_KEY>
 
 # ─────────────────────────────────────────────────────────────────────────────────
-# UNISWAP V4 ADDRESSES
+# UNISWAP V4 ADDRESSES (Official - https://docs.uniswap.org/contracts/v4/deployments)
 # ─────────────────────────────────────────────────────────────────────────────────
 
-POOL_MANAGER_BASE_SEPOLIA=
-POSITION_MANAGER_BASE_SEPOLIA=
+POOL_MANAGER_BASE_SEPOLIA=0x05E73354cFDd6745C338b50BcFDfA3Aa6fA03408
+POSITION_MANAGER_BASE_SEPOLIA=0x4b2c77d209d3405f41a037ec6c77f7f5b8e2ca80
+UNIVERSAL_ROUTER_BASE_SEPOLIA=0x492e6456d9528771018deb9e87ef7750ef184104
+POOL_SWAP_TEST_ROUTER_BASE_SEPOLIA=0x8b5bcc363dde2614281ad875bad385e0a785d3b9
 CREATE2_DEPLOYER_BASE_SEPOLIA=0x4e59b44847b379578588920cA78FbF26c0B4956C
 
-# Swap routers
-POOL_SWAP_TEST_ROUTER_BASE_SEPOLIA=
-UNIVERSAL_ROUTER_BASE_SEPOLIA=
-
 # ─────────────────────────────────────────────────────────────────────────────────
-# ALPHIX SYSTEM (fill after deployment)
+# ACCESS CONTROL
 # ─────────────────────────────────────────────────────────────────────────────────
 
-# Initial owner (deployer address)
-ALPHIX_MANAGER_BASE_SEPOLIA=
+# AccessManager admin (controls roles/permissions)
+ACCESS_MANAGER_ADMIN_BASE_SEPOLIA=<YOUR_ADMIN_ADDRESS>
 
-# Deployed contracts
-ACCESS_MANAGER_BASE_SEPOLIA=
-ALPHIX_HOOK_BASE_SEPOLIA=
+# Alphix hook owner (can pause, configure, manage pool)
+ALPHIX_OWNER_BASE_SEPOLIA=<YOUR_OWNER_ADDRESS>
+
+# Yield manager (can set yield sources and tick range)
+YIELD_MANAGER_BASE_SEPOLIA=<YOUR_YIELD_MANAGER_ADDRESS>
+
+# Fee poker (can call poke() to update dynamic fee)
+FEE_POKER_BASE_SEPOLIA=<YOUR_FEE_POKER_ADDRESS>
+
+# ═══════════════════════════════════════════════════════════════════════════════
+#                    TESTNET MOCK TOKENS (Optional)
+# ═══════════════════════════════════════════════════════════════════════════════
 
 # ─────────────────────────────────────────────────────────────────────────────────
-# POOL CONFIGURATION (03_CreatePool.s.sol)
+# MOCK TOKEN A (e.g., USDC-like) - testnet/00_DeployMockERC20.s.sol
 # ─────────────────────────────────────────────────────────────────────────────────
+# MOCK_TOKEN_NAME_BASE_SEPOLIA="Alphix Testnet USDC"
+# MOCK_TOKEN_SYMBOL_BASE_SEPOLIA=atUSDC
+# MOCK_TOKEN_DECIMALS_BASE_SEPOLIA=6
+# MOCK_TOKEN_INITIAL_MINT_BASE_SEPOLIA=1000000000000
 
-# Token addresses (TOKEN0 < TOKEN1, use 0x0...0 for ETH)
-TOKEN0_BASE_SEPOLIA=0x0000000000000000000000000000000000000000
-TOKEN1_BASE_SEPOLIA=
+# After deployment:
+# TOKEN_A_BASE_SEPOLIA=<deployed_address>
+
+# ─────────────────────────────────────────────────────────────────────────────────
+# MOCK TOKEN B (e.g., DAI-like) - Re-run testnet/00_DeployMockERC20.s.sol
+# ─────────────────────────────────────────────────────────────────────────────────
+# MOCK_TOKEN_NAME_BASE_SEPOLIA="Alphix Testnet DAI"
+# MOCK_TOKEN_SYMBOL_BASE_SEPOLIA=atDAI
+# MOCK_TOKEN_DECIMALS_BASE_SEPOLIA=18
+# MOCK_TOKEN_INITIAL_MINT_BASE_SEPOLIA=1000000000000000000000000
+
+# After deployment:
+# TOKEN_B_BASE_SEPOLIA=<deployed_address>
+
+# ─────────────────────────────────────────────────────────────────────────────────
+# MOCK WETH - testnet/01_DeployMockWETH.s.sol
+# ─────────────────────────────────────────────────────────────────────────────────
+# (No config needed - hardcoded name/symbol)
+
+# After deployment:
+# MOCK_WETH_BASE_SEPOLIA=<deployed_address>
+
+# ─────────────────────────────────────────────────────────────────────────────────
+# YIELD VAULT FOR TOKEN A - testnet/02_DeployMockYieldVault.s.sol
+# ─────────────────────────────────────────────────────────────────────────────────
+# MOCK_VAULT_ASSET_BASE_SEPOLIA=<TOKEN_A_ADDRESS>
+# MOCK_VAULT_NAME_BASE_SEPOLIA="Alphix Testnet USDC Vault"
+# MOCK_VAULT_SYMBOL_BASE_SEPOLIA=atUSDC-V
+
+# After deployment:
+# YIELD_SOURCE_A_BASE_SEPOLIA=<deployed_address>
+
+# ─────────────────────────────────────────────────────────────────────────────────
+# YIELD VAULT FOR TOKEN B - Re-run testnet/02_DeployMockYieldVault.s.sol
+# ─────────────────────────────────────────────────────────────────────────────────
+# MOCK_VAULT_ASSET_BASE_SEPOLIA=<TOKEN_B_ADDRESS>
+# MOCK_VAULT_NAME_BASE_SEPOLIA="Alphix Testnet DAI Vault"
+# MOCK_VAULT_SYMBOL_BASE_SEPOLIA=atDAI-V
+
+# After deployment:
+# YIELD_SOURCE_B_BASE_SEPOLIA=<deployed_address>
+
+# ─────────────────────────────────────────────────────────────────────────────────
+# ETH YIELD VAULT (WETH-based) - testnet/02b_DeployMockYieldVaultETH.s.sol
+# ─────────────────────────────────────────────────────────────────────────────────
+# MOCK_ETH_VAULT_WETH_BASE_SEPOLIA=<MOCK_WETH_ADDRESS>
+# MOCK_ETH_VAULT_NAME_BASE_SEPOLIA="Alphix Testnet ETH Vault"
+# MOCK_ETH_VAULT_SYMBOL_BASE_SEPOLIA=atETH-V
+
+# After deployment:
+# YIELD_SOURCE_ETH_BASE_SEPOLIA=<deployed_address>
+
+# ═══════════════════════════════════════════════════════════════════════════════
+#                    ALPHIX HOOK DEPLOYMENT
+# ═══════════════════════════════════════════════════════════════════════════════
+
+# LP token metadata
+TOKEN_NAME_BASE_SEPOLIA="Alphix LP Shares"
+TOKEN_SYMBOL_BASE_SEPOLIA=ALPHIX-LP
+
+# After deployment (00_DeployAccessManager.s.sol):
+# ACCESS_MANAGER_BASE_SEPOLIA=<deployed_address>
+
+# After deployment (01_DeployAlphix.s.sol or 01_DeployAlphixETH.s.sol):
+# ALPHIX_HOOK_BASE_SEPOLIA=<deployed_address>
+
+# ═══════════════════════════════════════════════════════════════════════════════
+#                    POOL CREATION CONFIG (03_CreatePool.s.sol)
+# ═══════════════════════════════════════════════════════════════════════════════
+
+# Token addresses (TOKEN0 < TOKEN1 by address, use 0x0...0 for native ETH)
+# For ERC20/ERC20 pool: Sort tokens by address (lower first)
+TOKEN0_BASE_SEPOLIA=<LOWER_TOKEN_ADDRESS>
+TOKEN1_BASE_SEPOLIA=<HIGHER_TOKEN_ADDRESS>
+
+# For ETH/ERC20 pool:
+# TOKEN0_BASE_SEPOLIA=0x0000000000000000000000000000000000000000
+# TOKEN1_BASE_SEPOLIA=<ERC20_TOKEN_ADDRESS>
 
 # Pool parameters
 TICK_SPACING_BASE_SEPOLIA=60
-# floor(sqrt(token1/token0) * 2**96) (take decimals into account)
-# Default value 79228162514264337593543950336 = sqrt(1) * 2^96 = 1:1 price ratio
+
+# Starting price: floor(sqrt(token1/token0) * 2^96)
+# Default 79228162514264337593543950336 = sqrt(1) * 2^96 = 1:1 price ratio
 SQRT_PRICE_BASE_SEPOLIA=79228162514264337593543950336
 
-# Initial liquidity (in wei)
-AMOUNT0_BASE_SEPOLIA=1000000000000000000
-AMOUNT1_BASE_SEPOLIA=1000000000000000000
+# Initial liquidity amounts (in wei)
+AMOUNT0_BASE_SEPOLIA=1000000000000000000000
+AMOUNT1_BASE_SEPOLIA=1000000000000000000000
+
 # Number of tick spacings around current price for liquidity range
 LIQUIDITY_RANGE_BASE_SEPOLIA=100
 
 # Dynamic fee settings
 INITIAL_FEE_BASE_SEPOLIA=3000
-TARGET_RATIO_BASE_SEPOLIA=1000000000000000000
+# Target ratio: 0.5e18 = 50% (balanced), 1e18 = 100%
+TARGET_RATIO_BASE_SEPOLIA=500000000000000000
 
-# ─────────────────────────────────────────────────────────────────────────────────
-# REHYPOTHECATION (04_ConfigureReHypothecation.s.sol)
-# ─────────────────────────────────────────────────────────────────────────────────
+# ═══════════════════════════════════════════════════════════════════════════════
+#                    REHYPOTHECATION CONFIG (04_ConfigureReHypothecation.s.sol)
+# ═══════════════════════════════════════════════════════════════════════════════
 
-# Yield sources (ERC-4626 vaults)
+# Yield sources (ERC-4626 vaults) - must match TOKEN0/TOKEN1 order
 # For ETH pools: YIELD_SOURCE_0 must implement IAlphix4626WrapperWeth
-YIELD_SOURCE_0_BASE_SEPOLIA=
-YIELD_SOURCE_1_BASE_SEPOLIA=
+YIELD_SOURCE_0_BASE_SEPOLIA=<YIELD_VAULT_FOR_TOKEN0>
+YIELD_SOURCE_1_BASE_SEPOLIA=<YIELD_VAULT_FOR_TOKEN1>
 
-# JIT tick range
+# JIT tick range (full range by default)
 JIT_TICK_LOWER_BASE_SEPOLIA=-887220
 JIT_TICK_UPPER_BASE_SEPOLIA=887220
 
-# Shares to mint (05_AddRHLiquidity.s.sol)
-RH_SHARES_BASE_SEPOLIA=1000000000000000000
+# ═══════════════════════════════════════════════════════════════════════════════
+#                    ADD LIQUIDITY CONFIG
+# ═══════════════════════════════════════════════════════════════════════════════
 
-# ─────────────────────────────────────────────────────────────────────────────────
-# ROLES (optional, defaults to ALPHIX_MANAGER)
-# ─────────────────────────────────────────────────────────────────────────────────
+# Normal V4 liquidity (05_AddLiquidity.s.sol)
+LP_AMOUNT0_BASE_SEPOLIA=1000000000000000000000
+LP_AMOUNT1_BASE_SEPOLIA=1000000000000000000000
+LP_LIQUIDITY_RANGE_BASE_SEPOLIA=100
 
-YIELD_MANAGER_BASE_SEPOLIA=
-FEE_POKER_BASE_SEPOLIA=
+# Rehypothecated liquidity shares (05b_AddRHLiquidity.s.sol)
+RH_SHARES_BASE_SEPOLIA=1000000000000000000000
 
-# ─────────────────────────────────────────────────────────────────────────────────
-# OPERATIONS
-# ─────────────────────────────────────────────────────────────────────────────────
+# ═══════════════════════════════════════════════════════════════════════════════
+#                    OPERATIONS
+# ═══════════════════════════════════════════════════════════════════════════════
 
 # Swap parameters (06_Swap.s.sol / 06b_SwapUniversalRouter.s.sol)
 SWAP_AMOUNT_IN_BASE_SEPOLIA=100000000000000000
@@ -115,33 +215,8 @@ SWAP_ZERO_FOR_ONE_BASE_SEPOLIA=true
 SWAP_MIN_OUTPUT_BASE_SEPOLIA=0
 
 # Fee update (07_PokeFee.s.sol)
-CURRENT_RATIO_BASE_SEPOLIA=1000000000000000000
+CURRENT_RATIO_BASE_SEPOLIA=500000000000000000
 
 # Ownership transfer (08_TransferOwnership.s.sol)
-NEW_OWNER_BASE_SEPOLIA=
+NEW_OWNER_BASE_SEPOLIA=<MULTISIG_ADDRESS>
 
-# ─────────────────────────────────────────────────────────────────────────────────
-# LP TOKEN METADATA (optional)
-# ─────────────────────────────────────────────────────────────────────────────────
-
-TOKEN_NAME_BASE_SEPOLIA="Alphix LP Shares"
-TOKEN_SYMBOL_BASE_SEPOLIA="ALPHIX-LP"
-
-# ─────────────────────────────────────────────────────────────────────────────────
-# TESTNET MOCKS (script/alphix/testnet/)
-# ─────────────────────────────────────────────────────────────────────────────────
-
-# Mock token deployment
-MOCK_TOKEN_NAME_BASE_SEPOLIA="Mock USDC"
-MOCK_TOKEN_SYMBOL_BASE_SEPOLIA="mUSDC"
-MOCK_TOKEN_DECIMALS_BASE_SEPOLIA=6
-MOCK_TOKEN_INITIAL_MINT_BASE_SEPOLIA=1000000000000
-
-# Deployed mocks
-MOCK_WETH_BASE_SEPOLIA=
-MOCK_USDC_BASE_SEPOLIA=
-
-# Mock yield vault deployment
-MOCK_VAULT_ASSET_BASE_SEPOLIA=
-MOCK_VAULT_NAME_BASE_SEPOLIA="Mock USDC Vault"
-MOCK_VAULT_SYMBOL_BASE_SEPOLIA="mvUSDC"
