--- a/.env.example
+++ b/.env.example
@@ -21,6 +21,7 @@
 #     04_ConfigureReHypothecation.s.sol → Yield sources + JIT range
 #     05_AddLiquidity.s.sol            → Add normal V4 liquidity
 #     05b_AddRHLiquidity.s.sol         → Add rehypothecated liquidity
+#     05c_RemoveRHLiquidity.s.sol      → Remove rehypothecated liquidity
 #     06_Swap.s.sol                    → Execute swaps (testnet - PoolSwapTest)
 #     06b_SwapUniversalRouter.s.sol    → Execute swaps (mainnet - Universal Router)
 #     07_PokeFee.s.sol                 → Update dynamic fee
@@ -204,6 +205,15 @@ LP_LIQUIDITY_RANGE_BASE_SEPOLIA=100
 
 # Rehypothecated liquidity shares (05b_AddRHLiquidity.s.sol)
 RH_SHARES_BASE_SEPOLIA=1000000000000000000000
+# Max token amounts to prevent overspending (required safety check)
+RH_AMOUNT0_MAX_BASE_SEPOLIA=10000000000000000000000
+RH_AMOUNT1_MAX_BASE_SEPOLIA=10000000000
+
+# Remove rehypothecated liquidity (05c_RemoveRHLiquidity.s.sol)
+RH_REMOVE_SHARES_BASE_SEPOLIA=1000000000000000000000
+# Min token amounts for slippage protection (set to 0 for no protection)
+RH_REMOVE_AMOUNT0_MIN_BASE_SEPOLIA=0
+RH_REMOVE_AMOUNT1_MIN_BASE_SEPOLIA=0
 
 # ═══════════════════════════════════════════════════════════════════════════════
 #                    OPERATIONS
