Chore: Make Rehypo tick range immutable + adapt tests and scripts

--- a/.env.example
+++ b/.env.example
@@ -65,7 +65,7 @@ ACCESS_MANAGER_ADMIN_BASE_SEPOLIA=<YOUR_ADMIN_ADDRESS>
 # Alphix hook owner (can pause, configure, manage pool)
 ALPHIX_OWNER_BASE_SEPOLIA=<YOUR_OWNER_ADDRESS>
 
-# Yield manager (can set yield sources and tick range)
+# Yield manager (can set yield sources)
 YIELD_MANAGER_BASE_SEPOLIA=<YOUR_YIELD_MANAGER_ADDRESS>
 
 # Fee poker (can call poke() to update dynamic fee)
@@ -181,6 +181,12 @@ INITIAL_FEE_BASE_SEPOLIA=3000
 # Target ratio: 0.5e18 = 50% (balanced), 1e18 = 100%
 TARGET_RATIO_BASE_SEPOLIA=500000000000000000
 
+# JIT tick range (immutable after pool initialization)
+# These define where JIT liquidity will be provided during swaps
+# Full range example for tick spacing 60: min=-887220, max=887220
+JIT_TICK_LOWER_BASE_SEPOLIA=-887220
+JIT_TICK_UPPER_BASE_SEPOLIA=887220
+
 # ═══════════════════════════════════════════════════════════════════════════════
 #                    REHYPOTHECATION CONFIG (04_ConfigureReHypothecation.s.sol)
 # ═══════════════════════════════════════════════════════════════════════════════
@@ -189,10 +195,6 @@ TARGET_RATIO_BASE_SEPOLIA=500000000000000000
 # For ETH pools: YIELD_SOURCE_0 must implement IAlphix4626WrapperWeth
 YIELD_SOURCE_0_BASE_SEPOLIA=<YIELD_VAULT_FOR_TOKEN0>
 YIELD_SOURCE_1_BASE_SEPOLIA=<YIELD_VAULT_FOR_TOKEN1>
-
-# JIT tick range (full range by default)
-JIT_TICK_LOWER_BASE_SEPOLIA=-887220
-JIT_TICK_UPPER_BASE_SEPOLIA=887220
 
 # ═══════════════════════════════════════════════════════════════════════════════
 #                    ADD LIQUIDITY CONFIG
@@ -206,14 +208,14 @@ LP_LIQUIDITY_RANGE_BASE_SEPOLIA=100
 # Rehypothecated liquidity shares (05b_AddRHLiquidity.s.sol)
 RH_SHARES_BASE_SEPOLIA=1000000000000000000000
 # Max token amounts to prevent overspending (required safety check)
-RH_AMOUNT0_MAX_BASE_SEPOLIA=10000000000000000000000
-RH_AMOUNT1_MAX_BASE_SEPOLIA=10000000000
+RH_AMOUNT0_MAX_BASE_SEPOLIA=
+RH_AMOUNT1_MAX_BASE_SEPOLIA=
 
 # Remove rehypothecated liquidity (05c_RemoveRHLiquidity.s.sol)
 RH_REMOVE_SHARES_BASE_SEPOLIA=1000000000000000000000
 # Min token amounts for slippage protection (set to 0 for no protection)
-RH_REMOVE_AMOUNT0_MIN_BASE_SEPOLIA=0
-RH_REMOVE_AMOUNT1_MIN_BASE_SEPOLIA=0
+RH_REMOVE_AMOUNT0_MIN_BASE_SEPOLIA=
+RH_REMOVE_AMOUNT1_MIN_BASE_SEPOLIA=
 
 # ═══════════════════════════════════════════════════════════════════════════════
 #                    OPERATIONS
