Chore: Minor fixes

--- a/.env.example
+++ b/.env.example
@@ -208,6 +208,7 @@ LP_LIQUIDITY_RANGE_BASE_SEPOLIA=100
 # Rehypothecated liquidity shares (05b_AddRHLiquidity.s.sol)
 RH_SHARES_BASE_SEPOLIA=1000000000000000000000
 # Max token amounts to prevent overspending (required safety check)
+# Scale by each token's decimals (TOKEN0/TOKEN1 are ordered by address, not type).
 RH_AMOUNT0_MAX_BASE_SEPOLIA=
 RH_AMOUNT1_MAX_BASE_SEPOLIA=
 
